--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "movie-app": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,10 +42,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
-
-
     "postcss-loader": "^8.1.1",
-
     "tailwindcss": "^3.4.14",
     "typescript": "~5.7.2"
   }
